# PretextView

./: .gitignore  .gitmodules  AGPCorrect  CMakeLists.txt  CONTRIBUTORS.md  ColorMapData.cpp  Info.plist  LICENCE.txt  PretextView.cpp  PretextView.rc  README.md  TextureLoadQueue.cpp  cmake_install.sh  compile_glfw_libdeflate.sh  create_mac_dmg.sh  download_libtorch_unix.sh  download_libtorch_win.bat  icon.icns  install.cmake.bat  install.cmake.sh  install.sh  mac_dmg_generate.sh  make_macos_app_plist.sh  meson.build  pretextviewai.desktop.in
.github/workflows/: build.yml  deploy.yml
ai_model/: model_scripted.pt  save_scripted_ai_model_for_PretextViewAI.py  test_gen_ai_model.py
ico_design/: icon_design.ai
include/: Header.h  stb_image_resize.h  stb_image_write.h
include/glad/: glad.h
python/autoCut/: auto_cut.py  error_pd.py  global_settings.py  install.sh  utils.py
python/autoCut/models/cfgs/: error_model.py
python/autoCut/models/swin/mmdet/apis/: inference.py
python/autoCut/models/swin/requirements/: runtime.txt
python/frag_cluster/: kmeans_utils.py
src/: ColorMapData.cpp  Resources.cpp  TextureLoadQueue.cpp  ai_cut_json_parse.h  aisort.cpp  aisort.h  auto_curation_state.h  copy_texture.cpp  copy_texture.h  frag_cut_calculation.h  frag_for_compress.h  frag_sort.cpp  frag_sort.h  frags_order.h  genomeData.h  grey_out_settings.h  hic_figure.cpp  hic_figure.h  kmeans_pybind.h  likelihood_table.h  parse_agp.h  self_matrix.h  shaderSource.h  shaders.cpp  shaders.hpp  showWindowData.h  spectral_cluster.h  user_profile_settings.h  utilsPretextView.cpp  utilsPretextView.h  yahs_sort.cpp  yahs_sort.h
src/shaderSource/: contactMatrixFragment.shader  contactMatrixFragmentHIC.shader  contactMatrixVertex.shader  contactMatrixVertexHIC.shader  editGeometry.shader  editVertex.shader  flatFragment.shader  flatVertex.shader  uiFragment.shader  uiVertex.shader
